fixed promo overflow

--- a/stylesheets/pages/_home.sass
+++ b/stylesheets/pages/_home.sass
@@ -16,6 +16,7 @@
     overflow: hidden
 
     height: 225px
+    max-width: 100%
 
     background: #f4f4f4
 
